--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-    "cSpell.words": [
-        "multirotor"
-    ]
+  "cSpell.words": [
+    "HEXA",
+    "LIPO",
+    "Milliamp",
+    "multirotor",
+    "OCTO",
+    "whkg"
+  ]
 }
